Fix various bugs breaking the plugin

--- a/addons/sketchfab/plugin.cfg
+++ b/addons/sketchfab/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="Sketchfab"
 description="Sketchfab browsing & importing right inside Godot"
-author="Edouard Murat"
-version="4.0"
+author="Jony Kalavera"
+version="4.2"
 script="plugin.gd"
