--- a/addons/sketchfab/plugin.cfg
+++ b/addons/sketchfab/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="Sketchfab"
 description="Sketchfab browsing & importing right inside Godot"
-author="Jony Kalavera"
+author="Edouard Murat"
 version="4.2"
 script="plugin.gd"
